--- a/views/user/changepw.handlebars
+++ b/views/user/changepw.handlebars
@@ -11,8 +11,8 @@
                     <div class="form-group clear cenform">
                         <label for="password">Current Password</label>
                         <input type="password" name="password" class="form-control" value="" required>
-                        <h6 style="font-weight: normal;  ">Forgot password? <a href="/user/login"
-								style="color: #8BAD97; font-weight:bold;"><u>Click here to Reset</u></a></h6>
+                        {{!-- <h6 style="font-weight: normal;  ">Forgot password? <a href="/user/login"
+								style="color: #8BAD97; font-weight:bold;"><u>Click here to Reset</u></a></h6> --}}
                     </div>
 
                     {{!-- <div class="clear cenform ">
