--- a/views/staff/listCust.handlebars
+++ b/views/staff/listCust.handlebars
@@ -37,23 +37,48 @@
                                     <td>&nbsp;{{email}}</td>
                                     <td>&nbsp;{{address}}</td>
                                     <td>
-                                        <div>
+                                        {{!-- <div>
                                             <a href="/staff/editCust/{{id}}" class="card-link mb-2"
                                                 style="color: #8BAD97">
                                                 <i class="fas fa-pencil-alt"></i>
                                                 Edit
                                             </a>
-                                        </div>
+                                        </div> --}}
                                         <div>
                                             {{!-- <a href="/staff/deleteaccount/{{id}}" class="card-link"
                                                 style="color: darkred" data-toggle="confirmation"
                                                 data-title="Confirm delete?">
                                                 <i class="far fa-trash-alt"></i> --}}
 
-                                                <href="/staff/listCust" data-toggle="modal" data-target="#deletecust" class="card-link" style="color: darkred">
-                                <i class="far fa-trash-alt"></i>
-                                                Delete
-                                            </a>
+                                                <!-- Logout Modal-->
+                                                <div class="modal fade" id="deletecust" tabindex="-1" role="dialog"
+                                                    aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                                    <div class="modal-dialog" role="document">
+                                                        <div class="modal-content">
+                                                            <div class="modal-header">
+                                                                <h5 class="modal-title" id="exampleModalLabel">Delete
+                                                                    Customer Account</h5>
+                                                                <button class="close" type="button" data-dismiss="modal"
+                                                                    aria-label="Close">
+                                                                    <span aria-hidden="true">×</span>
+                                                                </button>
+                                                            </div>
+                                                            <div class="modal-body">Select "Delete" below if you are
+                                                                deleting this customer account.</div>
+                                                            <div class="modal-footer">
+                                                                <button class="btn btn-secondary" type="button"
+                                                                    data-dismiss="modal">Cancel</button>
+                                                                <a class="btn btn-primary"
+                                                                    href="/staff/deleteaccount/{{id}}">Delete</a>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <a href="/staff/deleteaccount/{{id}}" data-toggle="modal"
+                                                    data-target="#deletecust" class="card-link" style="color: darkred">
+                                                    <i class="far fa-trash-alt"></i>
+                                                    Delete
+                                                </a>
                                         </div>
                                     </td>
                                 </tr>
@@ -74,29 +99,23 @@
     </div>
     {{/if}}
 </body>
-
-<script>
-    $('[data-toggle=confirmation]').confirmation({
-        rootSelector: '[data-toggle=confirmation]',
-    });
-</script>
-
- <!-- Logout Modal-->
-    <div class="modal fade" id="deletecust" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Delete Customer Account</h5>
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">Select "Delete" below if you are deleting this customer account.</div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="/staff/deleteaccount/{{id}}">Delete</a>
-                </div>
+{{!--
+<!-- Logout Modal-->
+<div class="modal fade" id="deletecust" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Delete Customer Account</h5>
+                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">Select "Delete" below if you are deleting this customer account.</div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+                <a class="btn btn-primary" href="/staff/deleteaccount/{{id}}">Delete</a>
             </div>
         </div>
     </div>
+</div> --}}
