--- a/views/product/itemDesc.handlebars
+++ b/views/product/itemDesc.handlebars
@@ -78,10 +78,12 @@
                             
                             <div>
                                 <div>
-                                    <button class="btn btn-outline-danger addToCart" \>
-                                        <i class="fa fa-cart-plus"></i> Add to cart 
+                                    <form action="" method="post">
+                                    <button id="btnSubmit" type="submit" class="btn btn-outline-danger addToCart">
+                                    <i class="fa fa-cart-plus"></i>Add to cart
                                     </button>
                                     <a href="#" class="btn btn-light addToWish"><i class="fa fa-heart"></i> Wishlist </a>
+                                    </form>
                                 </div>
                             </div>
                             
