--- a/views/cart/cart.handlebars
+++ b/views/cart/cart.handlebars
@@ -35,7 +35,7 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="col-sm-6" style="float:left;">
-                    <a class="btn btn-secondary" href="/catalogue">
+                    <a class="btn btn-secondary" href="product/catalogue">
                         <span class="fa-solid fa-circle-arrow-left"></span> BACK </a>
                 </div>
                 <div class="col-sm-6" style="float:right;">
