--- a/views/product/editProduct.handlebars
+++ b/views/product/editProduct.handlebars
@@ -19,24 +19,24 @@
                         <label class="font-italic">Pack Size</label>
                         <br>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" id="25" value="25" name="size" 
-                            {{radioCheck product.size "25" }}>
-                            <label class="form-check-label" for="25">25</label>
-                        </div>
-                        <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" id="50" value="50" name="size"
+                            <input class="form-check-input" type="radio" id="50" value="50" name="size" 
                             {{radioCheck product.size "50" }}>
-                            <label class="form-check-label" for="50">50</label>
-                        </div>
-                        <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" id="75" value="75" name="size"
-                            {{radioCheck product.size "75" }}>
-                            <label class="form-check-label" for="75">75</label>
+                            <label class="form-check-label" for="50">50g</label>
                         </div>
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="radio" id="100" value="100" name="size"
                             {{radioCheck product.size "100" }}>
-                            <label class="form-check-label" for="100">100</label>
+                            <label class="form-check-label" for="100">100g</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" id="200" value="200" name="size"
+                            {{radioCheck product.size "200" }}>
+                            <label class="form-check-label" for="200">200g</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" id="300" value="300" name="size"
+                            {{radioCheck product.size "300" }}>
+                            <label class="form-check-label" for="300">300g</label>
                         </div>
                     </div>
 					<div class="col-lg-3">
