--- a/views/product/addProduct.handlebars
+++ b/views/product/addProduct.handlebars
@@ -16,20 +16,20 @@
 						<label class="font-italic">Pack Size</label>
 						<br>
 						<div class="form-check form-check-inline">
-							<input class="form-check-input" type="radio" id="25" value="25" name="size">
-							<label class="form-check-label" for="25">25</label>
-						</div>
-						<div class="form-check form-check-inline">
 							<input class="form-check-input" type="radio" id="50" value="50" name="size">
-							<label class="form-check-label" for="50">50</label>
-						</div>
-						<div class="form-check form-check-inline">
-							<input class="form-check-input" type="radio" id="75" value="75" name="size">
-							<label class="form-check-label" for="75">75</label>
+							<label class="form-check-label" for="50">50g</label>
 						</div>
 						<div class="form-check form-check-inline">
 							<input class="form-check-input" type="radio" id="100" value="100" name="size">
-							<label class="form-check-label" for="100">100</label>
+							<label class="form-check-label" for="100">100g</label>
+						</div>
+						<div class="form-check form-check-inline">
+							<input class="form-check-input" type="radio" id="200" value="200" name="size">
+							<label class="form-check-label" for="200">200g</label>
+						</div>
+						<div class="form-check form-check-inline">
+							<input class="form-check-input" type="radio" id="300" value="300" name="size">
+							<label class="form-check-label" for="300">300g</label>
 						</div>
 					</div>
 					<div class="col-12 col-sm-12 col-md-12 col-lg-6" style="padding-left: 0px; padding-right: 0px; padding-bottom: 10px">
