--- a/views/staff/listStaff.handlebars
+++ b/views/staff/listStaff.handlebars
@@ -83,7 +83,7 @@
                                                 </div>
                                             </div>
                                             <div>
-                                                <a href="/staff/deletestaff/{{id}}" data-toggle="modal"
+                                                <a href="/staff/listStaff" data-toggle="modal"
                                                     data-target="#deletestaff" class="card-link" style="color: darkred">
                                                     <i class="far fa-trash-alt"></i>
                                                     Delete Account
