--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -1,4 +1,4 @@
-{{!-- <!-- ========================= SECTION SUBSCRIBE  ========================= -->
+<!-- ========================= SECTION SUBSCRIBE  ========================= -->
 <section class="section-subscribe padding-y-lg">
     <div class="container">
 
@@ -42,7 +42,7 @@
         </div>
     </div>
 </section>
-<!-- ========================= SECTION SUBSCRIBE END// ========================= --> --}}
+<!-- ========================= SECTION SUBSCRIBE END// ========================= -->
 
 <!-- ========================= FOOTER ========================= -->
 <footer class="section-footer border-top">
