--- a/views/cart/purchase.handlebars
+++ b/views/cart/purchase.handlebars
@@ -34,6 +34,13 @@
             uiLibrary: 'bootstrap4',
         });
     </script>
+
+    <script>
+        function payment(){
+            window.open("../payment_card",
+            "PAYMENT","height=600,width=600,toolbar=no, menubar=no,scrollbars=no, resizeable=no,location=no,status=no");
+        }
+    </script>
 </head>
 <!-- ========================= SECTION CONTENT ========================= -->
 <section class="section-content padding-y">
@@ -129,7 +136,7 @@
                 <br>
                 <div>
                     <form action="" method="POST">
-                        <button type="submit" class="btn btn-success btn-block" id="checkout">
+                        <button type="submit" class="btn btn-success btn-block" id="checkout" onclick="payment()">
                             <h4>Pay</h4>
                         </button>
                         <input type="hidden" name="checkout" value="checkout">
