--- a/views/partials/_staffnav.handlebars
+++ b/views/partials/_staffnav.handlebars
@@ -97,7 +97,8 @@
                 <div id="collapseOrder" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Function:</h6>
-                        <a class="collapse-item" href="/">Order</a>
+                        <a class="collapse-item" href="/staff/listCustOrder">Order List</a>
+                        <a class="collapse-item" href="/">Manage Order</a>
                     </div>
                 </div>
             </li>
