--- a/views/cart/payment_card.handlebars
+++ b/views/cart/payment_card.handlebars
@@ -647,6 +647,7 @@
             -webkit-transform: rotateY(180deg);
             transform: rotateY(180deg);
         }
+
         nav {
             display: none;
         }
@@ -786,6 +787,13 @@
             <input id="securitycode" type="text" pattern="[0-9]*" inputmode="numeric">
         </div>
     </div>
+    <div class="field-container">
+        <form action="" method="POST">
+            <button type="submit" class="btn btn-success btn-block" id="payment" style="length:100%">
+                <h4>Pay</h4>
+            </button>
+            </form>
+        </div>
     <!-- partial -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/imask/3.4.0/imask.min.js'></script>
     {{!--
