--- a/views/cart/purchase.handlebars
+++ b/views/cart/purchase.handlebars
@@ -37,8 +37,9 @@
 
     <script>
         function payment(){
-            window.open("../payment_card",
-            "PAYMENT","height=600,width=600,toolbar=no, menubar=no,scrollbars=no, resizeable=no,location=no,status=no");
+            var orderid = document.getElementById("id").innerHTML
+            window.open("../payment_card/" + orderid,
+            "PAYMENT","height=700,width=600,toolbar=no, menubar=no,scrollbars=no, resizeable=no,location=no,status=no");
         }
     </script>
 </head>
@@ -159,7 +160,7 @@
     </div>
     </div>
 
-
+<p id="id" name="id">{{orderId}}</p>
 
     </div> <!-- container .//  -->
 </section>
