--- a/views/cart/payment_is_successful.handlebars
+++ b/views/cart/payment_is_successful.handlebars
@@ -1,1 +1,25 @@
-<h1>hello world</h1>
+<section class="section-content padding-y">
+    <h2 class="section-title">PAYMENT DONE?</h2>
+    <br>
+    <h5>If you have payed Order, Please Choose [Done]</h5>
+    <form action="" method="post">
+        <input href="" class="btn btn-warning btn-outline" onclick="history.back()" value="Cancel">
+        <input type="submit" class="btn btn-success btn-outline" value="Done"></input>
+    </form>
+    
+    
+</section>
+
+
+<style>
+    section {
+        text-align: center;
+    }
+
+    a {
+        width: 35%;
+    }
+    input {
+        width: 25%;
+    }
+</style>
