--- a/views/product/itemDesc.handlebars
+++ b/views/product/itemDesc.handlebars
@@ -10,7 +10,7 @@
                         <article class="gallery-wrap">
                             <div class="img-big-wrap">
                                 <a href="{{posterURL}}" data-title="{{title}}" data-toggle="lightbox">
-                                    <img src="{{posterURL}}" alt="Poster" class="img-thumbnail img-fluid mb-2"
+                                    <img src="{{product.posterURL}}" alt="Poster" class="img-thumbnail img-fluid mb-2"
                                         onerror="this.src='/img/no-image.jpg'" style="max-height:160px">
                                 </a>
                             </div> <!-- slider-product.// -->
