--- a/views/staff/profile.handlebars
+++ b/views/staff/profile.handlebars
@@ -29,7 +29,7 @@
                 <div class="card mb-3">
                     <div class="card-body">
 
-                        <div style="float:right;">
+                        {{!-- <div style="float:right;">
                             <a href="/staff/editProfile/{{id}}" class="card-link mb-2" style="color: #8BAD97">
                                 <i class="fas fa-pencil-alt"></i>
                                 Edit Information
@@ -41,20 +41,34 @@
                                 <i class="fa-solid fa-lock"></i>
                                 Change Password
                             </a>
+                        </div> --}}
+                        
+                        {{!-- <a href="/staff/deleteaccount/{{id}}" class="card-link" style="color: darkred"
+                            data-toggle="confirmation" data-title="Confirm delete?">
+                            <i class="far fa-trash-alt"></i>
+                            Delete
+                        </a> --}}
 
-                            {{!-- <a href="/staff/deleteaccount/{{id}}" class="card-link" style="color: darkred"
-                                data-toggle="confirmation" data-title="Confirm delete?">
-                                <i class="far fa-trash-alt"></i>
-                                Delete
-                            </a> --}}
 
-                        </div>
                         <div class="row">
                             <div class="col-sm-3">
                                 <h6 class="mb-0">ID</h6>
                             </div>
                             <div class="col-sm-9 text-secondary">
-                                {{id}}
+                                {{id}} 
+                                <div style="float:right;">
+                            <a href="/staff/editProfile/{{id}}" class="card-link mb-2" style="color: #8BAD97">
+                                <i class="fas fa-pencil-alt"></i>
+                                Edit Information
+                            </a>
+
+
+
+                            <a href="/staff/changePW/{{id}}" class="card-link mb-2">
+                                <i class="fa-solid fa-lock"></i>
+                                Change Password
+                            </a>
+                        </div>
                             </div>
                         </div>
                         <hr>
@@ -117,12 +131,12 @@
                             </div>
                         </div> --}}
                         <div style="float:right;">
-                         <a href=" /staff/dashboard" data-toggle="modal" data-target="#deletestaffprofile"
+                            <a href=" /staff/dashboard" data-toggle="modal" data-target="#deletestaffprofile"
                                 class="card-link" style="color: darkred">
                                 <i class="far fa-trash-alt"></i>
                                 Delete Account
-                                </a>
-                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
 
