--- a/views/voucher/addVoucher.handlebars
+++ b/views/voucher/addVoucher.handlebars
@@ -22,13 +22,12 @@
                         <label for="code">Code</label>
                         <input type="text" class="form-control" name="code" value="{{code}}" id="lastname" onblur="initialiseLastname()"required>
                     </div>
-
+                    
                     <div class="form-group clear left spacing1">
                         <label for="valid">Valid Till</label>
-                       {{!-- <input id="datepicker" width="200" name="valid" readonly /> --}}
-                        <input type="date" name="valid" class="form-control" value="{{valid}}" required>
+                       <input id="datepicker" width="222" name="valid" value="{{valid}}" required />
+                        {{!-- <input type="date" name="valid" class="form-control" value="{{valid}}" required> --}}
                     </div>
-
 
                 <div style="padding-top:25px; padding-left:45px; float:right;">
                     <button type="submit" class="staffbtn" >ADD VOUCHER</button>
@@ -39,10 +38,12 @@
     </div>
 </div>
 
-{{!-- <script>
+<script>
 	$('#datepicker').datepicker({
 		format: 'dd/mm/yyyy',
 		uiLibrary: 'bootstrap4',
 		value: moment().format('DD/MM/YYYY'),
 	});
-</script> --}}
+</script>
+
+
